--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,17 +5,17 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "c7a2a04be15f08bc892687f61b11059b43c8cb3b",
+   "rev": "4e685d14db58b1ab29024bb0761902a3615f3f14",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "v4.20.0-rc5",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "59a8514bb0ee5bae2689d8be717b5272c9b3dc1c",
+   "rev": "304c5e2f490d546134c06bf8919e13b175272084",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -25,7 +25,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "003ff459cdd85de551f4dcf95cdfeefe10f20531",
+   "rev": "25078369972d295301f5a1e53c3e5850cf6d9d4c",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -35,7 +35,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "5013810061a18ca1f5510106172b94c6fbd0a2fc",
+   "rev": "f5e58ef1f58fc0cbd92296d18951f45216309e48",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -45,17 +45,17 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "8fff3f074da9237cd4e179fd6dd89be6c4022d41",
+   "rev": "632ca63a94f47dbd5694cac3fd991354b82b8f7a",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.52-pre",
+   "inputRev": "v0.0.59",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "ba9a63be53f16b3b6e4043641c6bad4883e650b4",
+   "rev": "9264d548cf1ccf0ba454b82f931f44c37c299fc1",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -65,7 +65,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "7b3b0c8327b3c0214ac49ca6d6922edbb81ab8c9",
+   "rev": "36ce5e17d6ab3c881e0cb1bb727982507e708130",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -75,7 +75,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "38b1e7c22593e2977d2b4a77cb8992bdf9f370b1",
+   "rev": "78e1181c4752c7e10874d2ed5a6a15063f4a35b6",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -85,7 +85,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover",
-   "rev": "a2eb24a3dbf681f2b655f82ba5ee5b139d4a5abc",
+   "rev": "4f22c09e7ded721e6ecd3cf59221c4647ca49664",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
