--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,10 +1,10 @@
 name = "Loom"
 version = "0.1.0"
 keywords = ["math"]
-defaultTargets = ["Loom", "LoomCaseStudies"]
+defaultTargets = ["Loom", "CaseStudies"]
 
 [[lean_lib]]
-name = "LoomCaseStudies"
+name = "CaseStudies"
 
 [leanOptions]
 pp.unicode.fun = true # pretty-prints `fun a ↦ b`
