--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,7 +1,17 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover-community/lean-auto",
+ [{"url": "https://github.com/leanprover-community/repl",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "8e951c49f202d47dba756cfffe8b918aedf1ea71",
+   "name": "REPL",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "8e951c49f202d47dba756cfffe8b918aedf1ea71",
+   "inherited": false,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover-community/lean-auto",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
